--- a/M183.Blog/Views/Shared/_LoginPartial.cshtml
+++ b/M183.Blog/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,6 @@
-﻿@using Microsoft.AspNet.Identity
+﻿@using Microsoft.Ajax.Utilities
+@using Microsoft.AspNet.Identity
+@using Microsoft.Owin
 @if (Session["Username"] != null)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
