Add user dashboard (posts overview) and post detail view

--- a/M183.Blog/Views/Shared/_Layout.cshtml
+++ b/M183.Blog/Views/Shared/_Layout.cshtml
@@ -22,7 +22,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Dashboard", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Dashboard", "Index", "Dashboard")</li>
                     <li>@Html.ActionLink("Info", "About", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
