--- a/M183.Blog/Content/Site.css
+++ b/M183.Blog/Content/Site.css
@@ -22,3 +22,41 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.posts {
+
+}
+
+/* Style rules for post */
+.post {
+    margin-top: 20px;
+    border-radius: 10px;
+    border: 1px solid #d2d2d2;
+    box-shadow: 1px 1px 3px #0000001a;
+}
+    .post > .header {
+        padding: 10px;
+        background-color: #eee;
+        border-radius: 10px 10px 0 0;
+    }
+        .post > .header > h2 {
+            font-weight: 600;
+            color: #212121;
+        }
+    .post > .content {
+        padding: 10px;
+    }
+
+.comments {
+    margin-top: 50px;
+}
+
+.comment {
+    border-radius: 10px;
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: #ececec;
+}
+    .comment > p {
+        margin: 0;
+    }
