--- a/M183.Blog/Content/Site.css
+++ b/M183.Blog/Content/Site.css
@@ -1,12 +1,10 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 80px;
     padding-bottom: 20px;
-}
-
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -16,13 +14,6 @@
     white-space: normal;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
-
 .posts {
 
 }
@@ -30,33 +21,57 @@ textarea {
 /* Style rules for post */
 .post {
     margin-top: 20px;
-    border-radius: 10px;
-    border: 1px solid #d2d2d2;
-    box-shadow: 1px 1px 3px #0000001a;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.11);
+    border: 1px solid #eee;
+    border-left-width: 5px;
+    border-radius: 4px;
+    border-left-color: #05a4d3;
+    padding: 20px;
 }
-    .post > .header {
-        padding: 10px;
-        background-color: #eee;
-        border-radius: 10px 10px 0 0;
+    .post > .header > h4 {
+        font-size: 20px;
+        margin-top: 0;
+        margin-bottom: 8px;
+        color: #05a4d3;
     }
-        .post > .header > h2 {
-            font-weight: 600;
-            color: #212121;
-        }
-    .post > .content {
-        padding: 10px;
+    .post > .content > p {
+        margin: 0;
     }
 
 .comments {
-    margin-top: 50px;
+    margin: 20px 0 0 40px;
 }
 
 .comment {
-    border-radius: 10px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.11);
+    border: 1px solid #eee;
+    border-left-width: 5px;
+    border-radius: 4px;
+    border-left-color: #0ca33d;
+    padding: 10px 20px;
     margin-bottom: 10px;
-    padding: 10px;
-    background-color: #ececec;
 }
     .comment > p {
         margin: 0;
     }
+
+.comment-box {
+    margin-top: 20px;
+    padding: 10px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.11);
+    border-radius: 10px;
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #adadad;
+    background-color: #f5f5f5;
+    border-width: 0 5px;
+    border-color: #656565;
+}
+
+.comment-box > textarea {
+    margin-bottom: 10px;
+}
+
+footer {
+    margin-top: 50px;
+}
