Add Permission-Checks (Admin-/User-Dashboards) & Bugfixes in Seed-Method

--- a/M183.Blog/Views/Post/Index.cshtml
+++ b/M183.Blog/Views/Post/Index.cshtml
@@ -19,15 +19,21 @@
             <p><b>@comment.User kommentiert: </b><i>@comment.Content</i></p>
         </div>
     }
-
-    @using (Html.BeginForm("Comment", "Post", FormMethod.Post, new { @class = "form-vertical comment-box", role = "form" }))
+    @if (Session["Username"] != null)
     {
-        @Html.HiddenFor(m => m.Post.Id)
-        <div class="form-group">
-            @Html.LabelFor(m => m.Comment, "Kommentar", new { @class = "control-label" })
-            @Html.TextAreaFor(m => m.Comment, new { @class = "form-control" })
-        </div>
-        <button type="submit" class="btn btn-primary">Kommentieren</button>
+        using (Html.BeginForm("Comment", "Post", FormMethod.Post, new { @class = "form-vertical comment-box", role = "form" }))
+        {
+            @Html.HiddenFor(m => m.Post.Id)
+            <div class="form-group">
+                @Html.LabelFor(m => m.Comment, "Kommentar", new { @class = "control-label" })
+                @Html.TextAreaFor(m => m.Comment, new { @class = "form-control" })
+            </div>
+            <button type="submit" class="btn btn-primary">Kommentieren</button>
+        }
+    } else
+    {
+        <br />
+        <i>Bitte einloggen um zu kommentieren!</i>
     }
 </div>
 
