--- a/M183.Blog/Views/AdminDashboard/Index.cshtml
+++ b/M183.Blog/Views/AdminDashboard/Index.cshtml
@@ -5,6 +5,17 @@
 }
 
 <h2>Admin Dashboard</h2>
+<div class="row">
+    <div class="col-lg-6 col-sm-12">
+        @using (Html.BeginForm("Index", "AdminDashboard", FormMethod.Get, new { @class = "form-inline", role = "form" }))
+        {
+            <div class="form-group">
+                @Html.TextBoxFor(m => m.Search, new { @class = "form-control", placeholder = "Durchsuchen" })
+            </div>
+            <button type="submit" class="btn btn-primary">Suchen</button>
+        }
+    </div>
+    </div>
 <div class="posts">
     @foreach (PostViewModel post in Model.Posts)
     {
@@ -16,5 +27,9 @@
                 <p>@post.Content</p>
             </div>
         </div>
+    }
+    @if(Model.Posts.Count == 0)
+    {
+        <p style="margin-top: 20px;">Keine Posts gefunden</p>
     }
 </div>
