--- a/M183.Blog/Views/Shared/_Layout.cshtml
+++ b/M183.Blog/Views/Shared/_Layout.cshtml
@@ -23,8 +23,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Dashboard", "Index", "UserDashboard")</li>
-                    <li>@Html.ActionLink("Admin", "Index", "AdminDashboard")</li>
+                    <li>@Html.ActionLink("Your Dashboard", "Index", "UserDashboard")</li>
+                    <li>@Html.ActionLink("Admin Dashboard", "Index", "AdminDashboard")</li>
                     <li>@Html.ActionLink("Info", "About", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
